--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node build/index.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\""
+    "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
+    "deploy:commands": "tsc && node build/deploy-commands.js"
   },
   "engines": {
     "node": ">=16.13.2"
@@ -15,9 +16,10 @@
     "@types/express": "^4.17.13",
     "concurrently": "6.4.0",
     "nodemon": "^2.0.19",
-    "typescript": "4.4.4"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@discordjs/rest": "^1.0.1",
     "discord.js": "13.3.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
